<resources>
    <string name="app_name">CeutaPort</string>
    <string name="multasButton">Infracciones</string>
    <string name="seleccionarButton">Seleccionar</string>
    <string name="txtNumArticulo">Articulo 13</string>
    <string name="txtTitulo">VEHÍCULOS INDUSTRIALES Y MAQUINARIA</string>
    <string name="txtDescripcion">El acceso de vehículos industriales y de maquinaria móvil , se autorizará en cada caso por la Dirección del Puerto , que podrá controlar sus características y estado de conservación y funcionamiento de acuerdo con lo que se establece en este Reglamento, sin que por ello pueda derivarse ninguna responsabilidad para la Junta del Puerto ni para su personal , en caso de accidente.</string>
    <string name="lblTimeDate">22:53 13/01/2018</string>
    <string name="lbSelArticulo">Articulo X : Cacaca</string>

    <!--   Spinners -->
    <string name="spinner_entidad">"Seleccione entidad a multar"</string>
    <string-array name="entidad_array">
        <item>Datos del particular o Empresa</item>
        <item>Datos del vehículo</item>
    </string-array>


    <string-array name="vehiculo_array">
        <item>Motocicleta</item>
        <item>Triciclo</item>
        <item>Cuatriciclo</item>
        <item>Turismo</item>
        <item>Autobús</item>
        <item>Autocaravana</item>
        <item>Camión</item>
        <item>Furgoneta</item>
        <item>Tractocamión</item>
        <item>Vehículo articulado</item>
        <item>Tren de carretera</item>
        <item>Remolque</item>
    </string-array>

    <string name="edLocation">Dirección , Lugar</string>
    <string name="btnDate">Fecha del hecho</string>
    <string name="btnTime">HORA DEL HECHO</string>
    <string name="btnNext2">Siguiente</string>
    <string name="btnMyLocation">Obtener dirección GPS</string>
    <string name="txtZona">Diligencia para hacer constar</string>
    <string name="txtDate">Siendo las 22:00 del día 22/10/2018</string>
    <string name="txtArticle">Articulo 8 : Prohbido estacionar el vehículo en zonas blalla</string>
    <string name="lblEntidadVehiculo">Datos del particular, empresa ó vehículo</string>
    <string name="txtDatos">Nombre Apellidos ......</string>
    <string name="btnGetPhotos">Obtener Fotos y Firma</string>
    <string name="txtTituloArticulo">Segun la ley de puertos esto está mal</string>
    <string name="txtNumArticle">306.2.a</string>
    <string name="txtDescriptionList">Descripción del articulo</string>
    <string name="btnSaveSancion">Guardar infracción</string>
    <string name="txtSDate">23 de Enero 2017</string>
    <string name="txtSDatos">Dni/Matricula Nombre</string>
    <string name="txtSSancion">Descripción Articulo, Num Articulo, Sancion</string>
    <string name="btnPrint">Imprimir Infracción</string>
    <string name="btnDelete">Borrar Infracción</string>
    <string name="txtToDay">Agente 1234 Ceuta a 23 de Mayo de 2018</string>


    <string name="ListaArticulos">"LISTA DE ARTICULOS"</string>
    <string name="IntroducirDatos">"INTRODUCCIÓN DE DATOS"</string>
    <string name="MenuPrincipal">"MENÚ PRINCIPAL"</string>
    <string name="Infracciones">"INFRACCIONES GUARDADAS"</string>
    <string name="Validar">"VALIDAR INFRACCIÓN"</string>
    <string name="DatosParticular">"Datos del particular o Empresa"</string>
    <string name="DatosVehiculo">"Datos del vehículo"</string>
    <string name="fotoFirmaSaved">Fotos y Firma Guardadas</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">¿No eres miembro? ¡Registrate ahora!</string>
    <string name="btn_link_to_login">¿Ya estás registrado?. ¡Logeate Aquí!</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Necesitamos el email con el que te registraste, te enviaremos las instrucciones para resetear tu password.</string>
    <string name="btn_reset_password">Resetear Password</string>
    <string name="btn_back"><![CDATA[<< Atrás]]></string>




</resources>
