<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtZona"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:background="@color/Orange_light"
        android:gravity="center"
        android:text="@string/txtZona"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:text="@string/txtDate"
        android:background="@color/grey_soft_background"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtArticle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:background="@color/black"
        android:gravity="center_horizontal|center"
        android:text="@string/txtArticle"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblEntidadVehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange_light"
        android:gravity="center"
        android:text="@string/lblEntidadVehiculo"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/txtDatos"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtToDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_soft_background"
        android:gravity="center"
        android:text="@string/txtToDay"
        android:textColor="@color/Orange_light"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGetPhotos"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:background="@color/Blue_light"
        android:text="@string/btnGetPhotos"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:background="@color/Blue_light"
        android:text="@string/btnPrint"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSaveSancion"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnSaveSancion"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@color/red_button"
        android:text="@string/btnDelete"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>