<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtNumArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:gravity="center"
        android:text="@string/txtNumArticulo"
        android:textColor="@color/Blue_light"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:gravity="center"
        android:text="@string/txtTitulo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.76"
        android:background="@color/Blue_light"
        android:gravity="center"
        android:text="@string/txtDescripcion"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSelecArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="@string/seleccionarButton" />

</LinearLayout>