<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSDate"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:background="@color/grey_soft_background"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/txtSDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/txtSDatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Orange_bright"
                android:gravity="left|center"
                android:text="@string/txtSDatos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSSancion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/txtSSancion"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>