<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNumArticulo"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:background="@color/Blue_light"
                android:gravity="left|center"
                android:textSize="13sp"
                android:paddingLeft="5dp"
                android:text="@string/txtNumArticle"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/txtTituloArticulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Orange_light"
                android:gravity="left|center"
                android:text="@string/txtTituloArticulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDescriptionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/txtDescriptionList"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>