<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNumArticulo"
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:background="@color/Blue_light"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/txtNumArticle"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="RtlHardcoded,RtlSymmetry,SmallSp" />

            <TextView
                android:id="@+id/txtTituloArticulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Orange_light"
                android:gravity="center|start"
                android:text="@string/txtTituloArticulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,SmallSp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtDescriptionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_dark_background"
            android:gravity="center|start"
            android:text="@string/txtDescriptionList"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="13sp" />


    </LinearLayout>

</LinearLayout>